Fixed positioning again, was too low

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -124,7 +124,7 @@ figure img {
   /* display: none; */
   position: fixed;
   z-index: 1;
-  padding-top: 60px;
+  padding-top: 40px;
   left: 0;
   top: 0;
   width: 100%;
